# GovnoChat

./: .gitignore  CMakeLists.txt  main.cpp
.devcontainer/: devcontainer.json
.github/workflows/: auto-check.yml  release-docker.yml
Client/: CMakeLists.txt  client.cpp
Docker/: Dockerfile  Dockerfile_build  Dockerfile_release
Protocol/: CMakeLists.txt
Protocol/Include/: IMessage.h  Message.h  Packet.h  Protocol.h  ServerStatusMessage.h  UserIDNotification.h  UserMessage.h
Protocol/Source/: Packet.cpp  Protocol.cpp
Python/Test/Client/: client.py
Scripts/: .ini  log.bat  log.sh  start.bat  start.sh  stop.bat  stop.sh
Server/: CMakeLists.txt  server.cpp
Server/Include/: Acceptor.h  ChatService.h  Server.h  Session.h  TCPServer.h
Server/Source/: Acceptor.cpp  ChatService.cpp  Server.cpp  Session.cpp  TCPServer.cpp  server.cpp
